[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.17.0"
dot_vox = "5.1.1"
egui = "0.28.1"
glam = { version = "0.30.2", features = ["serde"] }
pollster = "0.3.0"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
wgpu = "22.1.0"
winit = "0.30.5"
