[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.9.0"
bytemuck = "1.17.0"
cosmic-text = "0.14.2"
dot_vox = "5.1.1"
egui = "0.32.3"
glam = { version = "0.30.2", features = ["serde", "bytemuck"] }
once_cell = "1.21.3"
pollster = "0.4.0"
rand = "0.9.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
wgpu = "26.0.1"
winit = "0.30.12"
